--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,10 +4,11 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background: lightblue;
+    background: rgb(98, 140, 96);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
         sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
