--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 html,
 body {
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
