Added css variables for colors.

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,3 +2,10 @@
 $navbar-width: 250px;
 $page-width: calc(100% - $navbar-width);
 $page-padding: 50px;
+
+// Colors
+$color-green: #22c55e;
+$color-yellow: #f59e0b;
+$color-red: #ef4444;
+$bg-light: #262626;
+$font-color: #e1e1e1;
