--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -4,8 +4,17 @@ $page-width: calc(100% - $navbar-width);
 $page-padding: 50px;
 
 // Colors
-$color-green: #22c55e;
-$color-yellow: #f59e0b;
-$color-red: #ef4444;
-$bg-light: #262626;
-$font-color: #e1e1e1;
+// Got these color names from https://www.color-name.com/hex.
+$color-ufo-green: #22c55e;
+$color-orange: #f59e0b;
+$color-carmine-pink: #ef4444;
+$color-solid-black: #161616;
+$color-raisin-black: #262626;
+$color-chinese-white: #e1e1e1;
+$color-gunmetal: #28343f;
+
+// Colors - Background & Text
+$bg-color-game-card: $color-raisin-black;
+$text-color: $color-solid-black;
+$text-color-game-card: $color-chinese-white;
+$text-color-rating: $color-gunmetal;
