Cleaned up comments & commented-out code.
Changed Rating.js memo value to better match our new styling method.

Added scss variable to handle box sizing for Rating.js.

Renamed vars.scss variables to a more identifiable naming convention.

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -14,7 +14,7 @@ $color-chinese-white: #e1e1e1;
 $color-gunmetal: #28343f;
 
 // Colors - Background & Text
-$bg-color-game-card: $color-raisin-black;
-$text-color: $color-solid-black;
-$text-color-game-card: $color-chinese-white;
-$text-color-rating: $color-gunmetal;
+$bg-dark: $color-raisin-black;
+$text-dark: $color-solid-black;
+$text-light: $color-chinese-white;
+$text-dark-alt: $color-gunmetal;
