New bug introduced. Rating.js styling just broke after merging main, but worked before on both branches.

--- a/src/components/atoms/Rating/Rating.module.scss
+++ b/src/components/atoms/Rating/Rating.module.scss
@@ -1,5 +1,5 @@
-@use '/src/styles/vars';
-@use '/src/styles/placeholders';
+@use 'src/styles/vars';
+@use 'src/styles/placeholders';
 
 $box-sizing: 50px;
 
