--- a/src/components/molecules/NewsArticleCard/NewsArticleCard.module.scss
+++ b/src/components/molecules/NewsArticleCard/NewsArticleCard.module.scss
@@ -1,14 +1,14 @@
-.container {
-  background: lightgrey;
+.rating {
+    background: lightgrey;
 
-  p{
-    padding: 5px;
-    font-weight: 600;
-  }
+    p {
+        padding: 5px;
+        font-weight: 600;
+    }
 
-  img{
-    width: 250px;
-    height: 125px;
-    object-fit: fill;
-  }
+    img {
+        width: 250px;
+        height: 125px;
+        object-fit: fill;
+    }
 }
