--- a/src/components/molecules/ScrollSection/ScrollSection.module.scss
+++ b/src/components/molecules/ScrollSection/ScrollSection.module.scss
@@ -1,10 +1,11 @@
-.container{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+@use 'src/styles/placeholders';
 
-  div{
+.scrollSection {
+    @extend %flex-column;
+    margin-bottom: 20px;
+}
+
+.scrollHead {
     display: flex;
-    justify-content: space-between;;
-  }
+    justify-content: space-between;
 }
