--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
 html,
 body {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+h2,
+p {
+    margin: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: inherit;
 }
