Lifted memo values out of Rating and into GameCard.
Is giving ratingText a default value if its parent passes it a prop that has a default?

--- a/src/components/molecules/GameCard/GameCard.module.scss
+++ b/src/components/molecules/GameCard/GameCard.module.scss
@@ -44,3 +44,19 @@
 .summary {
     overflow: hidden;
 }
+
+.highRating {
+    background-color: vars.$color-ufo-green;
+}
+
+.mediumRating {
+    background-color: vars.$color-orange;
+}
+
+.lowRating {
+    background-color: vars.$color-carmine-pink;
+}
+
+.noRating {
+    background-color: #7e8aa9;
+}
