Added default color & background-color.
Imported Lato font from google and set the default text to Lato with sans-serif for a backup.

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 html,
 body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: #262626;
+    color: #e1e1e1;
+    font-family: 'Lato', sans-serif;
 }
 
 h2,
