Added a memo to return the the class name, as a string, for styling GameCard's border & Ratings background-color.
The summary section slices extra characters beyond a max amount(SUMMARY_LENGTH).

Updated GaneCard's styling module; renaming classes, added classes for styles based on rating value, and changed properties to match new design.

Changed Navbar's background color, before I forget later.

--- a/src/components/atoms/Rating/Rating.module.scss
+++ b/src/components/atoms/Rating/Rating.module.scss
@@ -9,8 +9,10 @@ $box-sizing: 50px;
 
     border-radius: 20%;
     width: $box-sizing;
+    max-width: $box-sizing;
     height: $box-sizing;
-
+    max-height: $box-sizing;
     font-size: 1.5rem;
+    font-weight: 600;
     color: vars.$text-dark-alt;
 }
