- Forgot to change background color variables after naming a color.

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -16,8 +16,8 @@ $color-chinese-white: #e1e1e1;
 $color-gunmetal: #28343f;
 
 // Colors - Background & Text
-$bg-dark-lightest: $color-raisin-black;
-$bg-dark-lighter: $color-black-olive;
+$bg-dark-lightest: $color-black-olive;
+$bg-dark-lighter: $color-raisin-black;
 $bg-dark: $color-solid-black;
 $text-dark: $color-solid-black;
 $text-light: $color-chinese-white;
