Changed PageWrappers margin-left to right, since navbar is on the right now.

--- a/src/components/atoms/PageWrapper/PageWrapper.module.scss
+++ b/src/components/atoms/PageWrapper/PageWrapper.module.scss
@@ -2,6 +2,6 @@
 
 .wrapper {
     width: vars.$page-width;
-    margin-left: vars.$navbar-width;
+    margin-right: vars.$navbar-width;
     padding: vars.$page-padding;
 }
