Adjusted page width calculations to fit new design, with some minor adjustments outside of the design. Using the design; the GamesContainer would be to big to display the "See All" links.

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,7 +1,7 @@
 // Sizes
 $navbar-width: 300px;
-$page-width: calc(100% - $navbar-width);
 $page-padding: 50px;
+$page-width: calc(100% - $navbar-width - ($page-padding * 2));
 $ratingBoxSize: 50px;
 
 // Colors
