Changed some styling on NewsArticleCard to align with navbars new design.

--- a/src/components/molecules/NewsArticleCard/NewsArticleCard.module.scss
+++ b/src/components/molecules/NewsArticleCard/NewsArticleCard.module.scss
@@ -1,9 +1,6 @@
 .newsArticle {
-    $width: 250px;
-
-    background: lightgrey;
+    $width: 100%;
     width: $width;
-    max-width: $width;
 
     p {
         padding: 5px;
