--- a/src/components/organisms/Navbar/Navbar.module.scss
+++ b/src/components/organisms/Navbar/Navbar.module.scss
@@ -4,11 +4,12 @@
 .navbar {
     $height: 100vh;
     @extend %flex-column;
-
+    gap: 2rem;
     position: fixed;
     right: 0;
     background-color: vars.$bg-dark;
     border-left: 3px solid vars.$text-light;
+    padding: 4rem vars.$navbar-padding-sides;
     width: vars.$navbar-width;
     max-width: vars.$navbar-width;
     height: $height;
@@ -17,24 +18,20 @@
 
 .navHead {
     font-size: 1.75rem;
-    border-bottom: 2px solid black;
-    text-align: center;
-    padding: 2rem;
+    border-bottom: 2px solid vars.$text-light;
 }
 
 .navLinks {
     @extend %flex-column;
-    padding: 1rem;
-    gap: 0.75rem;
+    gap: 0.25rem;
 }
 
 .navNews {
     @extend %flex-column;
     @extend %overflow-column;
-    padding: 1rem;
-    gap: 1rem;
-    flex-grow: 1;
     align-items: flex-start;
+    gap: 1rem;
+    height: 525px;
 }
 
 .navNewsHead {
