--- a/src/components/molecules/NewsArticleCard/NewsArticleCard.module.scss
+++ b/src/components/molecules/NewsArticleCard/NewsArticleCard.module.scss
@@ -1,17 +1,58 @@
+@use 'src/styles/placeholders';
+@use 'src/styles/vars';
+
+$text-margin: 5px;
+
 .newsArticle {
-    $width: 250px;
-
-    background: lightgrey;
-    width: $width;
-    max-width: $width;
-
-    p {
-        padding: 5px;
-        font-weight: 600;
-    }
+    @extend %flex-row;
+    height: 230px;
+    gap: 8px;
+    overflow: hidden;
 
     img {
         width: 100%;
-        object-fit: fill;
+        height: 100%;
+        object-fit: cover;
     }
+
+    div {
+        width: 50%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
+.title {
+    @extend %font-inter;
+    font-size: 20px;
+}
+
+.date {
+    @extend %font-lato-italic;
+    margin-top: $text-margin;
+    font-size: 12px;
+    color: vars.$color-lotion;
+}
+
+.description {
+    // Ellipsis information
+    // @see https://stackoverflow.com/a/21018009
+    $font-size: 16px;
+    $line-height: 1.4;
+    $lines-to-show: 4;
+    display: block; /* Fallback for non-webkit */
+    display: -webkit-box;
+    max-width: 400px;
+    height: $font-size * $line-height * $lines-to-show; /* Fallback for non-webkit */
+    margin: 0 auto;
+    font-size: $font-size;
+    line-height: $line-height;
+    -webkit-line-clamp: $lines-to-show;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    // Our styles
+    @extend %font-lato;
+    margin-top: $text-margin;
 }
