--- a/src/components/organisms/Navbar/Navbar.module.scss
+++ b/src/components/organisms/Navbar/Navbar.module.scss
@@ -1,8 +1,11 @@
 @use 'src/styles/vars';
 @use 'src/styles/placeholders';
 
+$standard-padding: 1rem 0;
+$standard-rem: 0.75rem;
+$header-size: 28px;
+
 .navbar {
-    $height: 100vh;
     @extend %flex-column;
 
     position: sticky;
@@ -10,34 +13,37 @@
     background-color: vars.$bg-dark;
     border-right: 1px;
     width: vars.$navbar-width;
-    max-width: vars.$navbar-width;
-    height: $height;
-    max-height: $height;
+    height: 100vh;
+    padding: 40px;
+
+    h2 {
+        @extend %font-inter;
+        font-size: $header-size;
+        color: vars.$color-lotion;
+        padding: 8px 0;
+    }
 }
 
 .navHead {
-    font-size: 1.75rem;
-    border-bottom: 2px solid black;
-    text-align: center;
-    padding: 2rem;
+    border-bottom: 1px solid vars.$color-lotion;
 }
 
 .navLinks {
     @extend %flex-column;
-    padding: 1rem;
-    gap: 0.75rem;
+    padding: $standard-padding;
+    gap: $standard-rem;
+
+    p {
+        @extend %font-inter;
+        font-weight: 200;
+        font-size: 20px;
+        color: vars.$color-pure-white;
+    }
 }
 
 .navNews {
     @extend %flex-column;
     @extend %overflow-column;
-    padding: 1rem;
-    gap: 1rem;
-    flex-grow: 1;
-    align-items: flex-start;
-}
-
-.navNewsHead {
-    font-size: 1.6rem;
-    font-weight: 600;
+    height: 100%;
+    gap: 30px;
 }
