--- a/src/styles/placeholders.scss
+++ b/src/styles/placeholders.scss
@@ -42,6 +42,15 @@
     font-family: 'Inter', sans-serif;
 }
 
+%font-lato {
+    font-family: 'Lato', sans-serif;
+}
+
+%font-lato-italic {
+    font-family: 'Lato', sans-serif;
+    font-style: italic;
+}
+
 %text-ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
