--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,5 +1,5 @@
 // Sizes
-$navbar-width: 300px;
+$navbar-width: 480px;
 $page-width: calc(100% - $navbar-width);
 $page-padding: 50px;
 $ratingBoxSize: 50px;
@@ -14,6 +14,8 @@ $color-solid-black: #171717;
 $color-raisin-black: #262626;
 $color-black-olive: #404040;
 $color-chinese-white: #e1e1e1;
+$color-lotion: #fafafa;
+$color-pure-white: #ffffff;
 $color-gunmetal: #28343f;
 
 // Colors - Background & Text
