--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -17,6 +17,7 @@ $color-chinese-white: #e1e1e1;
 $color-lotion: #fafafa;
 $color-pure-white: #ffffff;
 $color-gunmetal: #28343f;
+$color-ripe-mango: #fbbf24;
 
 // Colors - Background & Text
 $bg-dark-lightest: $color-black-olive;
