--- a/src/components/atoms/PageWrapper/PageWrapper.module.scss
+++ b/src/components/atoms/PageWrapper/PageWrapper.module.scss
@@ -1,6 +1,6 @@
 @use '/src/styles/vars';
 
 .wrapper {
-    max-width: vars.$page-width;
+    width: vars.$page-width;
     padding: vars.$page-padding;
 }
