--- a/src/components/atoms/Rating/Rating.module.scss
+++ b/src/components/atoms/Rating/Rating.module.scss
@@ -8,10 +8,8 @@ $box-sizing: 50px;
     @extend %flex-center;
 
     border-radius: 20%;
-    width: $box-sizing;
-    max-width: $box-sizing;
+    min-width: $box-sizing;
     height: $box-sizing;
-    max-height: $box-sizing;
     font-size: 1.5rem;
     font-weight: 600;
     color: vars.$text-dark-alt;
