--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -14,6 +14,7 @@ $color-solid-black: #171717;
 $color-raisin-black: #262626;
 $color-black-olive: #404040;
 $color-chinese-white: #e1e1e1;
+$color-platinum: #e5e5e5;
 $color-lotion: #fafafa;
 $color-pure-white: #ffffff;
 $color-gunmetal: #28343f;
