--- a/src/components/organisms/Navbar/Navbar.module.scss
+++ b/src/components/organisms/Navbar/Navbar.module.scss
@@ -10,7 +10,7 @@
     border-left: 2px solid vars.$color-platinum;
     width: vars.$navbar-width;
     height: 100vh;
-    padding: 40px;
+    padding: vars.$page-padding;
     box-shadow: -20px 4px 30px rgba(0, 0, 0, 0.26);
 
     h2 {
@@ -42,7 +42,7 @@
     @extend %flex-column;
     @extend %overflow-column;
     height: 100%;
-    gap: 30px;
+    gap: 60px;
 }
 
 .seeMoreLink {
