--- a/src/components/organisms/GamesContainer/GamesContainer.module.scss
+++ b/src/components/organisms/GamesContainer/GamesContainer.module.scss
@@ -11,4 +11,10 @@
 
 .gamesWrap {
     @extend %wrap;
+    justify-content: space-between;
+}
+
+.buttonContainer {
+    align-self: center;
+    margin-top: vars.$page-padding;
 }
