--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -4,6 +4,7 @@ $page-width: calc(100% - $navbar-width);
 $page-padding: 64px;
 $ratingBoxSize: 50px;
 $hero-padding: 3rem;
+$spacing: 1rem;
 
 // Colors
 // Got these color names from https://www.color-name.com/hex.
