--- a/src/styles/placeholders.scss
+++ b/src/styles/placeholders.scss
@@ -65,3 +65,12 @@
     font-size: 12px;
     color: vars.$color-lotion;
 }
+
+%base-button {
+    @extend %font-inter;
+    padding: 8px 16px;
+    background-color: vars.$color-ripe-mango;
+    border: none;
+    color: vars.$color-raisin-black;
+    font-size: 20px;
+}
