--- a/src/components/atoms/Rating/Rating.module.scss
+++ b/src/components/atoms/Rating/Rating.module.scss
@@ -1,16 +1,16 @@
 @use 'src/styles/vars';
 @use 'src/styles/placeholders';
 
-$box-sizing: 50px;
+$size: 50px;
 
 .rating {
     display: flex;
     @extend %flex-center;
 
-    border-radius: 20%;
-    min-width: $box-sizing;
-    height: $box-sizing;
-    font-size: 1.5rem;
-    font-weight: 600;
+    border-radius: 4px;
+    min-width: $size;
+    height: $size;
+    font-size: 24px;
+    font-style: italic;
     color: vars.$text-dark-alt;
 }
